news_complete_training.log
  File "/workspaces/TimesUserProfilingCumAdRecommendation/news_training_standalone.py", line 98
    categories_l2 = {
                    ^
SyntaxError: '{' was never closed
